--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "receipt-app",
   "version": "0.1.0",
+  "homepage": "https://antoineghaddad.github.io/receipt-app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
